<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kabaddi.kabaddiActivity"
    android:background="@drawable/kabaddi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Timer"
            android:id="@+id/text_view_countdown"
            />

        <RelativeLayout
            style="@style/mainLayout">

            <LinearLayout
                android:id="@+id/ScoreBoxFootball"
                style="@style/Box1">

                <LinearLayout
                    style="@style/LinearColumn">

                    <TextView
                        style="@style/headings"
                        android:text="@string/team_a"
                        android:textColor="@color/headingBlue" />

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/mainScore"
                        android:text="@string/original_score"
                        android:background="@drawable/border"
                        android:textColor="@color/scoreBlue" />

                    <Button
                        android:id="@+id/ButtonscoreA"
                        style="@style/button"
                        android:background="@drawable/rounded_button_blue"
                        android:onClick="teamAScore"
                        android:text="@string/add_one_point" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/bonus"
                        android:onClick="teamAScore"
                        android:id="@+id/redCard_TeamA"/>

                    <Button
                        android:id="@+id/yellowCard_TeamA"
                        style="@style/button"
                        android:background="@drawable/rounded_button_yellow"
                        android:text="@string/allout"
                        android:onClick="allOutA"/>

                    <Button
                        android:id="@+id/multiPointsA"
                        style="@style/button"
                        android:text="@string/multiPoints"
                        android:background="@drawable/rounded_button_green"/>


                </LinearLayout>

                <LinearLayout
                    style="@style/LinearColumn">

                    <TextView
                        style="@style/headings"
                        android:text="@string/team_b"
                        android:textColor="@android:color/holo_green_dark" />

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/mainScore"
                        android:text="@string/original_score"
                        android:background="@drawable/border"
                        android:textColor="@android:color/holo_green_dark" />

                    <Button
                        android:id="@+id/ButtonscoreB"
                        style="@style/button"
                        android:background="@drawable/rounded_button_green"
                        android:onClick="teamBScore"
                        android:text="@string/add_one_point" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/bonus"
                        android:onClick="teamBScore"
                        android:id="@+id/redCard_TeamB"/>

                    <Button
                        android:id="@+id/yellowCard_TeamB"
                        style="@style/button"
                        android:background="@drawable/rounded_button_yellow"
                        android:text="@string/allout"
                        android:onClick="allOutB"/>

                    <Button
                        android:id="@+id/multiPointsB"
                        style="@style/button"
                        android:background="@drawable/rounded_button_blue"
                        android:text="@string/multiPoints"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                style="@style/button"
                android:id="@+id/button_start_pause"
                android:text="@string/start"
                android:background="@drawable/rounded_button_red"
                android:layout_below="@id/ScoreBoxFootball"/>

            <Button
                style="@style/button"
                android:id="@+id/reset"
                android:text="@string/reset"
                android:background="@drawable/rounded_button_blue"
                android:layout_below="@id/button_start_pause"/>

            <Button
                style="@style/button"
                android:id="@+id/finish"
                android:text="@string/finish"
                android:background="@drawable/rounded_button_green"
                android:layout_below="@id/reset"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>