<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Football.footballActivity"
    android:background="@drawable/football">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/mainLayout">

            <LinearLayout
                android:id="@+id/ScoreBoxFootball"
                style="@style/Box1">

                <LinearLayout
                    style="@style/LinearColumn">

                    <TextView
                        style="@style/headings"
                        android:text="@string/team_a"
                        android:textColor="@color/headingBlue" />

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/mainScore"
                        android:text="@string/original_score"
                        android:background="@drawable/border"
                        android:textColor="@color/scoreBlue" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_blue"
                        android:onClick="teamAScore"
                        android:text="@string/add_one_point" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/redCard"
                        android:id="@+id/redCard_TeamA"/>

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_yellow"
                        android:text="@string/yellowCard"
                        android:id="@+id/yellowCard_TeamA"/>


                </LinearLayout>

                <LinearLayout
                    style="@style/LinearColumn">

                    <TextView
                        style="@style/headings"
                        android:text="@string/team_b"
                        android:textColor="@android:color/holo_green_dark" />

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/mainScore"
                        android:text="@string/original_score"
                        android:background="@drawable/border"
                        android:textColor="@android:color/holo_green_dark" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_green"
                        android:onClick="teamBScore"
                        android:text="@string/add_one_point" />

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/redCard"
                        android:id="@+id/redCard_TeamB"/>

                    <Button
                        style="@style/button"
                        android:background="@drawable/rounded_button_yellow"
                        android:text="@string/yellowCard"
                        android:id="@+id/yellowCard_TeamB"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                style="@style/button"
                android:id="@+id/reset"
                android:text="@string/reset"
                android:background="@drawable/rounded_button_blue"
                android:layout_below="@id/ScoreBoxFootball"/>

            <Button
                style="@style/button"
                android:id="@+id/finish"
                android:text="@string/finish"
                android:background="@drawable/rounded_button_green"
                android:layout_below="@id/reset"/>



        </RelativeLayout>


    </LinearLayout>

</ScrollView>