<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:background="@drawable/basketball">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Timer"
            android:id="@+id/text_view_countdown"
            />

        <RelativeLayout
            style="@style/mainLayout"
            >

            <LinearLayout
                style="@style/Box1"
                android:id="@+id/ScoreBoxBB">


                <LinearLayout
                    style="@style/LinearColumn">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/teamA_nameTextView"
                            android:text="@string/team_a"
                            style="@style/headings"
                            android:textColor="@color/headingBlue" />

                        <ImageView
                            android:id="@+id/edit_teamA"
                            android:layout_width="@dimen/basket_annote_width"
                            android:layout_height="@dimen/basket_annote_height"
                            android:layout_gravity="center"
                            android:src="@drawable/edit" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/mainScore"
                        android:textColor="@color/scoreBlue"
                        android:text="@string/_0"
                        android:background="@drawable/border"/>

                    <Button
                        android:id="@+id/threePointerTeamA"
                        style="@style/button"
                        android:onClick="three"
                        android:background="@drawable/rounded_button_blue"
                        android:text="@string/_3_points" />

                    <Button
                        android:id="@+id/twoPointerTeamA"
                        style="@style/button"
                        android:onClick="two"
                        android:background="@drawable/rounded_button_blue"
                        android:text="@string/_2_points" />

                    <Button
                        android:id="@+id/freeTeamA"
                        style="@style/button"
                        android:onClick="one"
                        android:background="@drawable/rounded_button_blue"
                        android:text="@string/free_throw_1" />

                    <Button
                        android:id="@+id/undoTeamA"
                        style="@style/button"
                        android:onClick="undoa"
                        android:text="@string/undo"
                        android:background="@drawable/rounded_button_blue"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout

                    style="@style/LinearColumn">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/headings"
                            android:id="@+id/teamB_nameTextView"
                            android:textColor="@color/headingRed"
                            android:text="@string/team_b"/>

                        <ImageView
                            android:id="@+id/edit_teamB"
                            android:layout_width="@dimen/basket_annote_width"
                            android:layout_height="@dimen/basket_annote_height"
                            android:layout_gravity="center"
                            android:src="@drawable/edit" />
                    </LinearLayout>

                    <TextView
                        style="@style/mainScore"
                        android:id="@+id/team_b_score"
                        android:textColor="@color/scoreRed"
                        android:text="@string/_0"
                        android:background="@drawable/border"/>

                    <Button
                        android:id="@+id/threePointerTeamB"
                        style="@style/button"
                        android:onClick="threeb"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/_3_points" />

                    <Button
                        android:id="@+id/twoPointerTeamB"
                        style="@style/button"
                        android:onClick="twob"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/_2_points" />

                    <Button
                        android:id="@+id/freeTeamB"
                        style="@style/button"
                        android:onClick="oneb"
                        android:background="@drawable/rounded_button_red"
                        android:text="@string/free_throw_1" />

                    <Button
                        android:id="@+id/undoTeamB"
                        style="@style/button"
                        android:onClick="undob"
                        android:text="@string/undo"
                        android:background="@drawable/rounded_button_red"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/button_start_pause"
                style="@style/button"
                android:text="@string/start"
                android:background="@drawable/rounded_button_green"
                android:layout_below="@id/ScoreBoxBB"/>


            <Button
                style="@style/button"
                android:onClick="finish"
                android:text="@string/finish"
                android:background="@drawable/rounded_button_green"
                android:layout_below="@id/button_start_pause"/>



        </RelativeLayout>
    </LinearLayout>
</ScrollView>